[gd_scene load_steps=23 format=3 uid="uid://cadnxpfwar70q"]

[ext_resource type="PackedScene" uid="uid://cw7a7d30oh8r0" path="res://scenes/player/player.tscn" id="1_6u2if"]
[ext_resource type="Script" path="res://scripts/levels/TestLevel.gd" id="1_vvjc7"]
[ext_resource type="PackedScene" uid="uid://b8fanqt6wmmmm" path="res://scenes/npc/combat_test_target.tscn" id="2_w35bc"]
[ext_resource type="Script" path="res://scenes/levels/CombatHUD.gd" id="3_1cqa5"]
[ext_resource type="PackedScene" uid="uid://djwiw58ggihe5" path="res://scenes/ui/pause_menu.tscn" id="3_150e6"]
[ext_resource type="Script" path="res://scenes/levels/InteractionPrompt.gd" id="4_m1e27"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_upc4k"]
albedo_color = Color(0.74902, 0.729412, 0.776471, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_elu0w"]
material = SubResource("StandardMaterial3D_upc4k")
size = Vector2(20, 20)
subdivide_width = 4
subdivide_depth = 4

[sub_resource type="BoxShape3D" id="BoxShape3D_lex84"]
size = Vector3(20, 0.1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_ft5j5"]
size = Vector3(0.2, 2, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_dn77b"]
size = Vector3(0.2, 2, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wabsd"]
albedo_color = Color(0.564706, 0.0745098, 0.294118, 1)

[sub_resource type="BoxMesh" id="BoxMesh_b5i6k"]
material = SubResource("StandardMaterial3D_wabsd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mjrjg"]
albedo_color = Color(0.219608, 0.368627, 0.780392, 1)

[sub_resource type="BoxMesh" id="BoxMesh_d8kws"]
material = SubResource("StandardMaterial3D_mjrjg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_072v3"]
albedo_color = Color(0.192157, 0.6, 0.392157, 1)

[sub_resource type="BoxMesh" id="BoxMesh_igwde"]
material = SubResource("StandardMaterial3D_072v3")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iwojf"]

[sub_resource type="Sky" id="Sky_f5r8h"]
sky_material = SubResource("ProceduralSkyMaterial_iwojf")

[sub_resource type="Environment" id="Environment_4ojpr"]
background_mode = 2
sky = SubResource("Sky_f5r8h")
ambient_light_source = 3
ambient_light_energy = 3.0

[sub_resource type="NavigationMesh" id="NavigationMesh_fnhne"]
vertices = PackedVector3Array(-24.5, 1, -24.5, -24.5, 1, 24.5, 24.5, 1, 24.5, 24.5, 1, -24.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="BoxMesh" id="BoxMesh_bxdx3"]
size = Vector3(50, 1, 50)

[node name="TestLevel" type="Node3D"]
script = ExtResource("1_vvjc7")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="CombatHud" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_1cqa5")

[node name="CombatIndicator" type="Label" parent="UILayer/CombatHud"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="TargetInfo" type="Control" parent="UILayer/CombatHud"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TargetName" type="Label" parent="UILayer/CombatHud/TargetInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="Crosshair" type="Control" parent="UILayer/CombatHud"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeft" type="MarginContainer" parent="UILayer/CombatHud"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_right = 420
theme_override_constants/margin_bottom = 120

[node name="Bars" type="VBoxContainer" parent="UILayer/CombatHud/TopLeft"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HealthBar" type="ProgressBar" parent="UILayer/CombatHud/TopLeft/Bars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_vertical = 2

[node name="HealthText" type="Label" parent="UILayer/CombatHud/TopLeft/Bars"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100 / 100"

[node name="StaminaBar" type="ProgressBar" parent="UILayer/CombatHud/TopLeft/Bars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_vertical = 2

[node name="InteractionPrompt" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("4_m1e27")

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/InteractionPrompt"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.5
offset_top = -26.0
offset_right = 111.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12

[node name="PromptLabel" type="Label" parent="UILayer/InteractionPrompt/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="KeyHint" type="Label" parent="UILayer/InteractionPrompt/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "[E]"

[node name="Background" type="NinePatchRect" parent="UILayer/InteractionPrompt"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="PauseMenu" parent="UILayer" instance=ExtResource("3_150e6")]

[node name="Player" parent="." instance=ExtResource("1_6u2if")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Environment"]
collision_layer = 2
collision_mask = 0

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
mesh = SubResource("PlaneMesh_elu0w")

[node name="GroundCollision" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("BoxShape3D_lex84")

[node name="Walls" type="Node3D" parent="Environment"]

[node name="Wall1" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(-0.0078015, 0, 0.99997, 0, 1, 0, -0.99997, 0, -0.0078015, 0, 1, -10)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/Wall1"]
mesh = SubResource("BoxMesh_ft5j5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/Wall1"]
shape = SubResource("BoxShape3D_dn77b")

[node name="Wall2" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(0.0215531, 0, 0.999768, 0, 1, 0, -0.999768, 0, 0.0215531, 0, 1, 10)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/Wall2"]
mesh = SubResource("BoxMesh_ft5j5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/Wall2"]
shape = SubResource("BoxShape3D_dn77b")

[node name="Wall3" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 0)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/Wall3"]
mesh = SubResource("BoxMesh_ft5j5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/Wall3"]
shape = SubResource("BoxShape3D_dn77b")

[node name="Wall4" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 0)
collision_layer = 2
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/Wall4"]
mesh = SubResource("BoxMesh_ft5j5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/Wall4"]
shape = SubResource("BoxShape3D_dn77b")

[node name="References" type="Node3D" parent="Environment"]

[node name="Cube1" type="MeshInstance3D" parent="Environment/References"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, -3)
mesh = SubResource("BoxMesh_b5i6k")

[node name="Cube2" type="MeshInstance3D" parent="Environment/References"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, 3)
mesh = SubResource("BoxMesh_d8kws")

[node name="Cube3" type="MeshInstance3D" parent="Environment/References"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)
mesh = SubResource("BoxMesh_igwde")

[node name="Targets" type="Node3D" parent="Environment"]

[node name="CombatTestTarget" parent="Environment/Targets" instance=ExtResource("2_w35bc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0)

[node name="CombatTestTarget2" parent="Environment/Targets" instance=ExtResource("2_w35bc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.68458, 1, 4.45021)

[node name="CombatTestTarget3" parent="Environment/Targets" instance=ExtResource("2_w35bc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.49137, 1, -6.14782)

[node name="Lighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lighting"]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, 0, 0, 0)
shadow_enabled = true

[node name="Environment" type="WorldEnvironment" parent="Lighting"]
environment = SubResource("Environment_4ojpr")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_fnhne")

[node name="NavigationMesh" type="MeshInstance3D" parent="NavigationRegion3D"]
visible = false
mesh = SubResource("BoxMesh_bxdx3")
